fix spacing for header subtitle

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,6 +28,7 @@
         font-size: 23px;
         margin-left: 15px;
         margin-right: 15px;
+        line-height: 30px;
     }
 
     .story-section2-passenger {
